Implement LeNet1989 and modern CNN updates
- Finished training LeNet1989
- Added notebook for LeNet1989
- Started class for modern CNN architecture
- Updated .gitignore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "python.defaultInterpreterPath": "/opt/anaconda3/envs/6.86x311"
-
+  "python.defaultInterpreterPath": "/opt/anaconda3/envs/6.86x311",
+  "python.REPL.enableREPLSmartSend": false
 }
